--- a/web/themes/custom/breema2/sass/components/_actions.scss
+++ b/web/themes/custom/breema2/sass/components/_actions.scss
@@ -1,4 +1,5 @@
 .action {
+  margin: 1em 0 0.5em;
   a {
     text-decoration: none;
     font-size: 1em;
@@ -7,7 +8,6 @@
     -webkit-border-radius: 15px;
     padding: 3px 12px 3px 12px;
     display: inline-block;
-    margin: 1em 0 0.5em;
   }
   a:focus,
   a:hover {
@@ -45,23 +45,25 @@
   }
 }
 
+.container-inline .action {
+  display: inline-block;
+  margin: 0 0.65em 0.5em 0;
+}
+.container-inline .action:last-child {
+  margin-right: 0;
+}
+
 // Action links in the sidebar want special styles.
 .sidebar {
   .action {
     a {
-      margin: 1em auto 0;
+      margin: 0 auto;
       display: block;
       text-align: center;
       max-width: 150px;
     }
   }
 }
-
-.container-inline .action a,
-.sidebar .container-inline .action a {
-  margin: 0 0.65em 0.5em 0;
-}
-
 
 div.danger {
   display: block;
